# medina_autodiag

./: .dockerignore  .env.example  .gitignore  .project  ACTUALIZACIONES_MODELOS_EXISTENTES.py  ANALISIS_MODULO_VENTAS.md  ANALISIS_ORDENES_COMPRA.md  ANALISIS_PROYECTO_VERIFICACION.md  CHANGELOG_INVENTARIO.md  CORRECCIONES_REALIZADAS.md  CORRECION_IMPORTS_ORDENES.md  Dockerfile  GUIA_GITHUB.md  GUIA_GRAPH_API_EMAIL.md  GUIA_INVENTARIO.md  GUIA_MIGRACIONES.md  GUIA_ORDENES_TRABAJO.md  INSTALACION_SIMPLE.md  INSTRUCCIONES_CORRECCION.md  Makefile  README.md  RECOMENDACIONES_ORDENES_COMPRA.md  alembic.ini  comandos power shell.txt  comandos y passwords entorno python.txt  db_inventario.sql  db_ordenes_trabajo_LIMPIO.sql  db_ordenes_trabajo_SIN_FK.sql  diagnostico_tablas.sql  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  requirements.txt
alembic/: env.py
app/: BUILD_REV.txt  config.py  database.py  logging_config.py  main.py
docs/: ADR_P4_0_EVALUADOR_FINANCIERO.md  ADR_P6_0_MULTI_SUCURSAL.md  ANALISIS_COMISIONES.md  ANALISIS_DASHBOARD.md  ANALISIS_DEPLOY_RAILWAY.md  ANALISIS_MODULO_ASISTENCIA.md  ANALISIS_MODULO_AUDITORIA.md  ANALISIS_MODULO_AYUDA.md  ANALISIS_MODULO_CAJA.md  ANALISIS_MODULO_CITAS.md  ANALISIS_MODULO_CLIENTES.md  ANALISIS_MODULO_CONFIGURACION.md  ANALISIS_MODULO_CUENTAS_POR_PAGAR.md  ANALISIS_MODULO_DEVOLUCIONES.md  ANALISIS_MODULO_GASTOS.md  ANALISIS_MODULO_INVENTARIO.md  ANALISIS_MODULO_NOMINA.md  ANALISIS_MODULO_NOTIFICACIONES.md  ANALISIS_MODULO_ORDENES_COMPRA.md  ANALISIS_MODULO_ORDENES_TRABAJO.md  ANALISIS_MODULO_PRESTAMOS_EMPLEADOS.md  (+68 more)
(+455 files in other folders)
