[project]
name = "medina-autodiag-api"
version = "1.0.0"
description = "API para sistema de gestión de taller mecánico"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["alembic", "scripts", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/main.py" = ["E402"]
"app/routers/ordenes_trabajo/*.py" = ["E402"]
"app/services/caja_alertas.py" = ["E402"]

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = "alembic|scripts|\\.git"
skip-string-normalization = true
